0025294: Visualization, PrsMgr_Presentation - detach connected presentations on destruction